# Flexo

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  compile.sh
UPFlexo/: .gitignore  CMakeLists.txt  README.md  compile-circuits.sh  compile-packers.sh
UPFlexo/WM/: Makefile  chksum.h  compile.sh
UPFlexo/WM/AES/: AES_CTR.c  aes.h
UPFlexo/WM/Simon/: simon32.h  simon32_CTR.c
UPFlexo/src/: linker.cpp  main.cpp  p_unix.cpp
UPFlexo/src/compress/: aes.h  compress.cpp  compress_zstd.cpp  simon.h
UPFlexo/src/stub/scripts/: bin2h.py
UPFlexo/src/stub/src/: amd64-linux.elf-entry.S  amd64-linux.elf-weird-loader.S
circuits/: Makefile  README.md
circuits/AES/: Makefile  README.md  aes.h  aes_block.c  aes_round.c  aes_sep_round.c  sbox.c
circuits/ALU/: ALU.cpp  ALU.v  Makefile  README.md
circuits/SHA1/: Makefile  README.md  sha1.h  sha1_2blocks.c  sha1_round.c
circuits/Simon/: Makefile  README.md  simon32.c
circuits/arithmetic/: Makefile  README.md  adder.cpp  macro.h  mul.cpp
circuits/gates/: Makefile  README.md  and.c  expected.c  test.cpp
include/: Flexo.h  Utils.h
include/Circuits/: Circuit.h  Gate.h  IRParser.h  QuineMcCluskey.h  TruthTbl.h  Wire.h
include/WeirdMachines/: DualRetWM.h  WeirdMachine.h
include/WeirdRegisters/: DualWR.h  NoBranchWR.h  WeirdRegisters.h
include/WeirdRegisters/Mappings/: Mapping.h  ShuffleMap.h
lib/: CMakeLists.txt  Flexo.cpp  Utils.cpp
lib/Circuits/: BlifParser.cpp  CMakeLists.txt  Circuit.cpp  Gate.cpp  IRParser.cpp  QuineMcCluskey.cpp  TruthTbl.cpp
lib/WeirdMachines/: CMakeLists.txt  DualRetWM.cpp  WeirdMachine.cpp
lib/WeirdRegisters/: CMakeLists.txt  DualWR.cpp  NoBranchWR.cpp  WeirdRegisters.cpp
lib/WeirdRegisters/Mappings/: CMakeLists.txt  ShuffleMap.cpp
reproduce/: README.md  compile-all.sh  config.csv  pack-all.sh  run_WM.py  run_packed.py  util.py
reproduce/scripts/: build-all.sh  clean-all.sh  compile-circuits.sh  config-fast.csv  config.csv  pack-all.sh  run_WM.py  run_packed.py  test_install.py  util.py
